--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet">
-    <title>site de fut</title>
+    <title>site de futebol</title>
 </head>
 
 <body>
@@ -15,8 +15,8 @@
 
     <section class="chamada">
         <div class="chamada-texto">
-            <h1>ATRAVÉS DO ARANHAVERSO</h1> // titulo do site 
-            <p>#homem-aranha</p>                // aqui vai os ##
+            <h1>futebol</h1> // titulo do site 
+            <p>#futebol</p>                // aqui vai os ##
         </div>
 
         <div>   //aqui vai os links do youtube
