--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <p>#futebol</p>               
         </div>
 
-        <div>   /<iframe width="560" height="315" src="https://www.youtube.com/embed/ycpt3nSK4QE?si=j6QPcS3Eh2jMO0yT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <div>   <iframe width="560" height="315" src="https://www.youtube.com/embed/ycpt3nSK4QE?si=j6QPcS3Eh2jMO0yT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
 
