--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h2>Filmes e séries</h2>  // aqui os links dos videos abaixo
         <div class="categoria-videos">
             <a href="https://www.youtube.com/watch?v=cs15QqG6Gjc">
-                <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg" />
+                <img src="https://youtu.be/06mOd6aqckE?si=xoeejhpQebaWjwpn" />
             </a>
             <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
                 <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg" />
