--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>futebol</header>
-
+https://www.youtube.com/watch?v=cs15QqG6Gjc
     <section class="chamada">
         <div class="chamada-texto">
             <h1>futebol</h1> 
@@ -26,10 +26,11 @@
     <section class="categoria">
         <h2>Filmes e séries</h2>  // aqui os links dos videos abaixo
         <div class="categoria-videos">
-            <a href="https://www.youtube.com/watch?v=cs15QqG6Gjc">
-                <img src="https://youtu.be/06mOd6aqckE?si=xoeejhpQebaWjwpn" />
+           <iframe width="560" height="315" src="https://www.youtube.com/embed/lvradYsAeyc?si=hO5wZceBxBCOurl4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+
             </a>
-            <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
+            <a href="https://youtu.be/06mOd6aqckE?si=ACvUASDcCz6NDrx3">
                 <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=FvRmEapoHRc">
