--- a/index.html
+++ b/index.html
@@ -28,10 +28,7 @@ https://www.youtube.com/watch?v=cs15QqG6Gjc
         <div class="categoria-videos">
            <iframe width="560" height="315" src="https://www.youtube.com/embed/lvradYsAeyc?si=hO5wZceBxBCOurl4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-
-            </a>
-            <a href="https://youtu.be/06mOd6aqckE?si=ACvUASDcCz6NDrx3">
-                <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg" />
+<iframe width="560" height="315" src="https://www.youtube.com/embed/06mOd6aqckE?si=0cmovFgD-VStw3O6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </a>
             <a href="https://www.youtube.com/watch?v=FvRmEapoHRc">
                 <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg" />
